[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Sprites/truck.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/car.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/moped.png" type="Texture" id=3]
[ext_resource path="res://Scripts/enemy.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sfx/engine_3.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sfx/engine_2.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sfx/engine_1.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sfx/honk_1.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/Sfx/honk_4.wav" type="AudioStream" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "car",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "truck",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "moped",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 16 )

[node name="enemy" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "moped"
flip_v = true

[node name="moped_collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
shape = SubResource( 2 )
disabled = true

[node name="truck_collision" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -16 )
polygon = PoolVector2Array( 24, -16, 24, 16, 8, 16, 8, 32, -8, 32, -8, 16, -24, 16, -24, -16 )
disabled = true

[node name="car_collision" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -16 )
polygon = PoolVector2Array( 24, -16, 24, 0, 8, 0, 8, 16, 24, 16, 24, 32, 8, 32, 8, 48, -8, 48, -8, 32, -24, 32, -24, 16, -8, 16, -8, 0, -24, 0, -24, -16, -8, -16, -8, -2, -6, 0, 6, 0, 8, -2, 8, -16 )
disabled = true

[node name="visibility_notifyer" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -16 )
scale = Vector2( 0.8, 1.6 )

[node name="moped_honk_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -21.412
pitch_scale = 1.32

[node name="truck_honk_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -21.412
pitch_scale = 0.76

[node name="car_honk_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -21.412

[node name="moped_engine_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -29.824

[node name="truck_engine_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -29.824

[node name="car_engine_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -29.824

[connection signal="screen_exited" from="visibility_notifyer" to="." method="_on_visibility_notifyer_screen_exited"]
